--- a/biblioteca/src/app/home/book-page/book-page.component.html
+++ b/biblioteca/src/app/home/book-page/book-page.component.html
@@ -24,7 +24,7 @@
   </mat-card>
   </main>
 
-  <mat-expansion-panel *ngIf="book?.status=='ENABLE'&&userAdmin==='CLIENT'"  hideToggle>
+  <mat-expansion-panel *ngIf="book?.status=='ENABLE'&&userRole==='CLIENT'" hideToggle>
     <mat-expansion-panel-header>
       <mat-panel-title>
         I want to borrow this book
@@ -49,7 +49,7 @@
 
   </mat-expansion-panel>
 
-    <mat-expansion-panel *ngIf="userAdmin!=='CLIENT' &&userAdmin!=''"  [expanded]= "step === 1" (opened)="step=1" (closed)="step=0"   hideToggle>
+    <mat-expansion-panel *ngIf="userRole!=='CLIENT' &&userRole!=''" [expanded]= "step === 1" (opened)="step=1" (closed)="step=0" hideToggle>
       <mat-expansion-panel-header>
         <mat-panel-title>
           Modify book data
@@ -138,8 +138,8 @@
       <button mat-flat-button (click)="update()" class="update">UPDATE</button>
     </mat-expansion-panel>
     <mat-card-content class="end">
-      <button mat-flat-button *ngIf="!isWishBook&&userAdmin==='CLIENT'" (click)="addWishList()" > ❤ </button>
-      <button mat-flat-button *ngIf="isWishBook&&userAdmin==='CLIENT'" (click)="removeWishList()"> Remove</button>
+      <button mat-flat-button *ngIf="!isWishBook&&userRole==='CLIENT'" (click)="addWishList()" > ❤ </button>
+      <button mat-flat-button *ngIf="isWishBook&&userRole==='CLIENT'" (click)="removeWishList()"> Remove</button>
       <button mat-dialog-close mat-raised-button >Close</button>
     </mat-card-content>
 
