--- a/biblioteca/src/app/home/borrow/borrow.component.html
+++ b/biblioteca/src/app/home/borrow/borrow.component.html
@@ -2,7 +2,7 @@
 <mat-card *ngIf="userTelephone!=''">
   <mat-tab-group>
 
-    <mat-tab label="Return box" *ngIf="userAdmin=='ADMINISTRATOR'||userAdmin=='ROOT'">
+    <mat-tab label="Return box" *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'">
       <mat-card-title>
         <h1 class="title">Return box</h1>
         <button mat-flat-button (click)="getAllBorrowData()">Refresh</button>
@@ -107,10 +107,10 @@
       <br>
         <button mat-flat-button (click)="applyLendingAllOrNoReturnFilter('false'); all=true" *ngIf="!all">Only Show no Return</button>
         <button mat-flat-button (click)="getAllBorrowData(); all=false" *ngIf="all">Show All</button>
-        <button *ngIf="userAdmin=='ADMINISTRATOR'||userAdmin=='ROOT'" mat-flat-button (click)="readUserByExtensionBeyond30Days(); all=true" >Show Beyond 30 Days no Return</button>
-        <button *ngIf="userAdmin=='ADMINISTRATOR'||userAdmin=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_approaching_date'); all=true" >Send reminder email</button>
-        <button *ngIf="userAdmin=='ADMINISTRATOR'||userAdmin=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_order_overdue'); all=true" >Send order overdue email</button>
-        <button *ngIf="userAdmin=='ADMINISTRATOR'||userAdmin=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_overdue_max_30day'); all=true" >Send order beyond 30 Days no Return email</button>
+        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="readUserByExtensionBeyond30Days(); all=true" >Show Beyond 30 Days no Return</button>
+        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_approaching_date'); all=true" >Send reminder email</button>
+        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_order_overdue'); all=true" >Send order overdue email</button>
+        <button *ngIf="userRole=='ADMINISTRATOR'||userRole=='ROOT'" mat-flat-button (click)="sendReminderEmail('send_email_to_user_by_overdue_max_30day'); all=true" >Send order beyond 30 Days no Return email</button>
 
       <table mat-table #lendingSort="matSort" [dataSource]="lendingDataSource" class="table-unreturned" matSort>
         <ng-container matColumnDef="reference">
