--- a/biblioteca/src/app/management/management.component.html
+++ b/biblioteca/src/app/management/management.component.html
@@ -116,7 +116,7 @@
               <th mat-header-cell *matHeaderCellDef> Management </th>
               <td mat-cell *matCellDef="let element" >
                 <button mat-icon-button (click)="deleteAuthor(element.authorId)"><mat-icon>delete</mat-icon></button>
-                <button mat-icon-button ><mat-icon>visibility</mat-icon></button>
+                <button mat-icon-button (click)="openAuthorPage(element.authorId)"><mat-icon>visibility</mat-icon></button>
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef=" lowForAuthor "></tr>
