--- a/biblioteca/src/app/home/personal-page/personal-page.component.html
+++ b/biblioteca/src/app/home/personal-page/personal-page.component.html
@@ -104,7 +104,7 @@
   </mat-card-content>
 
   <mat-card-content *ngIf="wishListIsDisplay()">
-    <mat-card-title-group>BOOK WishList</mat-card-title-group>
+    <mat-card-title-group>Collection List</mat-card-title-group>
     <table mat-table [dataSource]="collectionList" class="mat-elevation-z8">
       <ng-container matColumnDef="bookID">
         <th mat-header-cell *matHeaderCellDef> BookID </th>
