--- a/biblioteca/src/app/home/personal-page/personal-page.component.html
+++ b/biblioteca/src/app/home/personal-page/personal-page.component.html
@@ -10,7 +10,7 @@
     <div *ngIf="isLoginUser()||isRoot()">
       <p class="wallet">E-wallet balance:{{wallet}}€</p>
       <p class="recharge" (click)="openRechargePage()">Recharge</p>
-      <p class="billing-records" (click)="openWithdrawMoneyPage()">Withdraw Money</p>
+      <p class="billing-records" (click)="openWithdrawMoneyPage()">Cash out</p>
       <p class="billing-records" (click)="openBillingRecordsPage()">Billing records</p>
     </div>
 
