--- a/biblioteca/src/app/home/personal-page/withdraw-money/withdraw-money.component.html
+++ b/biblioteca/src/app/home/personal-page/withdraw-money/withdraw-money.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-title>
-    <h3>Withdraw Money</h3>
+    <h3>Cash out</h3>
     <p>Account [TELEPHONE: {{telephone}}]</p>
     <p>Balance: {{balance}} €</p>
   </mat-card-title>
