Cambio de literal

--- a/biblioteca/src/app/home/personal-page/withdraw-money/withdraw-money.component.html
+++ b/biblioteca/src/app/home/personal-page/withdraw-money/withdraw-money.component.html
@@ -51,7 +51,7 @@
     <mat-spinner *ngIf="spinner" class="spinner"></mat-spinner>
 
     <br>
-    <button mat-flat-button [disabled]="WithdrawMoneyBtn" (click)="withdrawMoney()">Withdraw Money</button>
+    <button mat-flat-button [disabled]="WithdrawMoneyBtn" (click)="withdrawMoney()">Confirm</button>
     <button mat-flat-button  mat-dialog-close>Close</button>
   </mat-card-content>
 
