--- a/biblioteca/src/app/home/author-page/author-page.component.css
+++ b/biblioteca/src/app/home/author-page/author-page.component.css
@@ -1,63 +1,3 @@
-.book{
-  width: 23%;
-  /*height: 380px;*/
-  text-align: center;
-  padding: 0 0 20px 0;
-  margin:8px;
-  border-radius: 20px 4px 20px 4px;
-  position: relative;
-}
-
-.book-image{
-  margin-top: 28px;
-  width: 80%;
-  height: 160px;
-  object-fit: cover;
-  object-position: center;
-}
-.book-name{
-  width: 172px;
-  height: 56px;
-}
-.book-author{
-  width: 172px;
-  height: 40px;
-}
-.book p{
-  overflow: hidden;
-}
-.borrow-count{
-  font-size: 16px;
-  color: #c9c9c9;
-  text-align: left;
-  margin: 0;
-  padding-left: 12px;
-}
-.book-deposit{
-  color: #FF6B6B;
-  font-size: 28px;
-}
-.book-name,.book-author,.book-deposit{
-  text-align: left ;
-  padding: 8px 12px 0 12px;
-  margin: 0 0 4px 0;
-}
-.enable,.occupied,.disable{
-  width: 100%;
-  height: 20px;
-  border-radius: 20px 4px 0 0;
-  position: absolute;
-  top: 0;
-}
-.occupied{
-  background-color: #FF6B6B;
-}
-.enable{
-  background-color: #3BAFBE;
-}
-.disable{
-  background-color: #FFD166;
-}
 mat-card{
   display: inline-block;
   text-align: center;
@@ -70,12 +10,12 @@ main{
   padding: 40px 0 40px 0;
 }
 .bookList{
-  margin-top: 10px;
   width: 890px;
   text-align: left;
 }
 ::-webkit-scrollbar {
-  width: 0;
+  /*width: 0;*/
+  height: 0;
 }
 .author-name{
   font-size: 30px;
@@ -123,6 +63,11 @@ main{
 .book-author-name{
   margin-right: 8px;
 }
+.author-description{
+  line-height: 1.6;
+  max-height: 200px;
+  overflow: scroll;
+}
 .author-img{
   width: 100%;
   height: 100%;
@@ -130,17 +75,16 @@ main{
   object-position: center;
 
 }
+.left{
+  width: 500px;
+  float: left;
+}
 .image-container{
-  /*width: 200px;*/
-  /*height: 120px;*/
-  /*position: absolute;*/
-  /*top: 86px;*/
-  /*right: 120px;*/
-  width: 318px;
-  height: 188px;
-  position: absolute;
-  top: 38px;
-  right: 60px;
+  position: relative;
+  float: left;
+  width: 300px;
+  height: 300px;
+  margin-left: 60px;
 }
 .overlay label{
   width:100%;
@@ -169,8 +113,8 @@ label h3{
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   opacity: 0;
