--- a/biblioteca/src/app/home/book-search-page/book-search-page.component.css
+++ b/biblioteca/src/app/home/book-search-page/book-search-page.component.css
@@ -1,6 +1,14 @@
+main{
+  margin-inline:auto;
+  /*width: 1020px;*/
+  width: 100%;
+  /*text-align: center;*/
+}
+
 .select{
   width: 90%;
 }
+
 .bookSearch{
   margin-top: 10px;
   width: 90%;
@@ -16,66 +24,6 @@
   margin:0 20px 0 20px ;
 }
 
-.book{
-   width: 23%;
-   /*height: 380px;*/
-   text-align: center;
-   padding: 0 0 20px 0;
-   margin:8px;
-   border-radius: 20px 4px 20px 4px;
-   position: relative;
- }
-
-.book-image{
-  margin-top: 28px;
-  width: 80%;
-  height: 160px;
-  object-fit: cover;
-  object-position: center;
-}
-.book-name{
-  width: 180px;
-  height: 56px;
-}
-.book-author{
-  width: 180px;
-  height: 40px;
-}
-.book p{
-  overflow: hidden;
-}
-.borrow-count{
-  font-size: 16px;
-  color: #c9c9c9;
-  text-align: left;
-  margin: 0;
-  padding-left: 12px;
-}
-.book-deposit{
-  color: #FF6B6B;
-  font-size: 28px;
-}
-.book-name,.book-author,.book-deposit{
-  text-align: left ;
-  padding: 8px 12px 0 12px;
-  margin: 0 0 4px 0;
-}
-.enable,.occupied,.disable{
-  width: 100%;
-  height: 20px;
-  border-radius: 20px 4px 0 0;
-  position: absolute;
-  top: 0;
-}
-.occupied{
-  background-color: #FF6B6B;
-}
-.enable{
-  background-color: #3BAFBE;
-}
-.disable{
-  background-color: #FFD166;
-}
 mat-card{
   display: inline-block;
   text-align: center;
@@ -101,11 +49,7 @@ mat-form-field:nth-child(5){
   border-radius:  0 50% 50% 0  !important;
   transform: translateY(-2px);
 }
-main{
-  margin-inline:auto;
-  width: 1020px;
-  text-align: center;
-}
+
 .author-name{
   margin-right: 8px;
 }
